# dna-assembly-bsc

./: .gitignore  BubbleGun_Results.md  Deprecated_Doorstop.md  Dorstop_Tutorial.md  README.md  Raport.md  assemble.bat  auth.py  check_requirements.py  config_example.bat  deprecated.md  generate_docs.sh  generate_reads.bat  generate_reads.sh  generate_reads_all_genomes.bat  mkdocs.yml  run_pipeline.sh  test_auth.py
basic_dna_assembler/: README.md  assembly_comparison.csv  compare.sh  comparison.log.md  pyproject.toml  report.csv
basic_dna_assembler/data/: GCF_000007365.1_ASM736v1_genomic.fna
basic_dna_assembler/src/basic_dna_assembler/: assembler.py  compare_assemblies.py  evaluator.py  fastq_parser.py  kmer_graph.py  main.py
bubble_resolution_gnn/: GNN_infer.py  (+23 more)
random_genome_generator/: README.md  pyproject.toml  random.fna  random_1000.fna  random_10000.fna  random_50.fna
rust_basic_dna_assembler/: 04_01_assembled_ecoli.csv  04_01_assembled_klebsiella.csv  04_01_assembled_proteus.csv  04_01_assembled_salmonella.csv  Cargo.toml  assemble.sh  assemble_independent.sh  assemble_variants.sh  assemble_with_gnn.sh  assemble_with_heuristic.sh  assembly_eval.md  compare_minimap2.py  default_assembly.sh  detect_bubbles.sh  eval_ecoli.csv  eval_ecoli.md  eval_klebsiella.csv  eval_klebsiella.md  eval_salmonella.csv  eval_salmonella.md  export_gfa_from_all_genomes.sh  generate_datset.sh  rebuild.bat
rust_basic_dna_assembler/src/: assembler.rs  fastq_parser.rs  kmer_graph.rs  lib.rs  main.rs
rust_basic_dna_assembler/tests/: gnn_stub_integration.rs  pipeline_fastq.rs
(+162 files in other folders)
