[project]
name = "random-genome-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "przemyslaw-walecki",email = "p.walecki12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "random_genome_generator", from = "src"}]

[tool.poetry.scripts]
generate-genome = "random_genome_generator.genome_generator:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
